Bug 2031023 - make toolbarbutton icons use overflow-clip-margin: padding-box r=emilio,desktop-theme-reviewers
In bug 2027859 people have noticed that turning on the Nova design tokens with `browser.design-tokens.nova` will clip some of the toolbarbutton icons in the nav bar.

The main difference with the Nova tokens on is that border-radius goes from 8px to 9999px.

toolbarbutton <image> elements have a 16x16 content area with 8px padding all around.

The circle border-radius effect is working well for the hover effect: the darker background produces a circle around the icon. However, it appears that the <image> content area itself is getting clipped at all times, hover or not.

xul:image elements default to `overflow-clip-margin: content-box`. Setting `overflow-clip-margin: border-box` on the toolbarbutton icon elements allows those icons to display without visual clipping, with and without Nova enabled.

Differential Revision: https://phabricator.services.mozilla.com/D293613

UltraBlame original commit: 541af7885855bbe6e8a29594556b447e0a003e1e

--- a/browser/themes/shared/toolbarbuttons.css
+++ b/browser/themes/shared/toolbarbuttons.css
@@ -189,6 +189,7 @@ toolbar .toolbarbutton-1 {
     border-radius: var(--toolbarbutton-border-radius);
     outline: var(--toolbarbutton-outline);
     outline-offset: var(--toolbarbutton-outline-offset);
+    overflow-clip-margin: padding-box;
   }
 
   &:focus-visible {
